--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SMARTCITY KPI</title>
-  </head>
-  <body>
-    <svg></svg>
-    <script src="../dist/bundle.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>SMARTCITY KPI</title>
+		<style lang="css">
+			html,
+			body {
+				margin: 0;
+				padding: 0;
+			}
+			body {
+				background-color: rgb(61, 74, 100);
+				color: #fff;
+			}
+			text {
+				fill: #fff;
+				text-transform: uppercase;
+				text-overflow: ellipsis;
+			}
+		</style>
+	</head>
+	<body>
+		<svg></svg>
+		<script src="../dist/bundle.js"></script>
+	</body>
 </html>
