Add pointer class

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
 				text-transform: uppercase;
 				text-overflow: ellipsis;
 			}
+
+			.pointer {
+				cursor: pointer;
+			}
 		</style>
 	</head>
 	<body>
