--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,11 +11,17 @@
 		<link rel="stylesheet" href="/style/main.css" />
 	</head>
 	<body>
-		<span id="flip">Show labels</span>
-		<label class="switch">
-			<input type="checkbox" id="toggle" />
-			<span class="slider round"></span>
-		</label>
+		<div id="sunburst-sidebar" class="sidebar">
+			<div>HELLO</div>
+			<div>
+				<h3 id="flip">Toggle outer labels</h3>
+				<label class="switch">
+					<input type="checkbox" id="toggle" />
+					<span class="slider round"></span>
+				</label>
+			</div>
+		</div>
+
 		<script src="/js/bundle.js"></script>
 	</body>
 </html>
