--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,11 +12,10 @@
 	</head>
 	<body>
 		<div id="sunburst-sidebar" class="sidebar">
-			<div>HELLO</div>
 			<div>
 				<h3 id="flip">Toggle outer labels</h3>
 				<label class="switch">
-					<input type="checkbox" id="toggle" />
+					<input type="checkbox" id="label-toggler" />
 					<span class="slider round"></span>
 				</label>
 			</div>
