Add sunburst to own module

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,13 +11,16 @@
 		<link rel="stylesheet" href="/style/main.css" />
 	</head>
 	<body>
-		<div id="sunburst-sidebar" class="sidebar">
-			<div>
-				<h3 id="flip">Toggle outer labels</h3>
-				<label class="switch">
-					<input type="checkbox" id="label-toggler" />
-					<span class="slider round"></span>
-				</label>
+		<button id="show">show</button>
+		<div id="sunburst-container">
+			<div id="sunburst-sidebar" class="sidebar">
+				<div>
+					<h3 id="flip">Toggle outer labels</h3>
+					<label class="switch">
+						<input type="checkbox" id="label-toggler" />
+						<span class="slider round"></span>
+					</label>
+				</div>
 			</div>
 		</div>
 
