--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,10 +8,17 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+			integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+			crossorigin=""
+		/>
 		<link rel="stylesheet" href="/style/main.css" />
 	</head>
 	<body>
 		<button id="show">show</button>
+		<div id="leaflet-map"></div>
 		<div id="sunburst-container">
 			<div id="sunburst-sidebar" class="sidebar">
 				<div>
