--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,12 +14,15 @@
 			integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
 			crossorigin=""
 		/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
 		<link rel="stylesheet" href="/style/main.css" />
 	</head>
 	<body>
-		<button id="show">show</button>
 		<div id="leaflet-map"></div>
 		<div id="sunburst-container">
+			<div id="sunburst-close" class="close pointer" title="close">
+				<i class="fas fa-window-close"></i>
+			</div>
 			<div id="sunburst-sidebar" class="sidebar">
 				<div>
 					<h3 id="flip">Toggle outer labels</h3>
