--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,7 @@
 				<i class="fas fa-window-close"></i>
 			</div>
 			<div id="sunburst-sidebar" class="sidebar">
+				<div id="sidebar-close" class="sidebar-close pointer"></div>
 				<div>
 					<h3 id="flip">Toggle outer labels</h3>
 					<label class="switch">
