Add header and footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,8 @@
 		<link rel="stylesheet" href="/style/main.css" />
 	</head>
 	<body>
+		<header><h1>SMARTCITY KPI VISUALIZATION</h1></header>
+
 		<div id="leaflet-map"></div>
 		<div id="sunburst-container">
 			<div id="sunburst-close" class="close pointer" title="close">
@@ -34,7 +36,7 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="footer">Developed by Christoffer A Træen</div>
 		<script src="/js/bundle.js"></script>
 	</body>
 </html>
