--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,6 +35,7 @@
 					</label>
 				</div>
 			</div>
+			<div id="svg-container"></div>
 		</div>
 		<div class="footer">Developed by Christoffer A Træen</div>
 		<script src="/js/bundle.js"></script>
