--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,6 +28,32 @@
 			<div id="sunburst-sidebar" class="sidebar">
 				<div id="sidebar-close" class="sidebar-close pointer"></div>
 				<div>
+					<h3 id="flip">Compare</h3>
+					<div>
+						<label class="switch">
+							<input type="checkbox" id="compare-toggler" />
+							<span class="slider round"></span>
+						</label>
+					</div>
+
+					<div>
+						<label for="compare-dimension">Dimension</label>
+						<input class="coparator-selector" type="radio" name="type" id="compare-dimension" />
+						<br />
+						<label for="compare-sub-dimension">Sub dimension</label>
+						<input class="coparator-selector" type="radio" name="type" id="compare-sub-dimension" />
+						<br />
+						<label for="compare-category">Category</label>
+						<input class="coparator-selector" type="radio" name="type" id="compare-category" />
+					</div>
+					<div>
+						<select name="compare-selected-city" id="compare-selected-city">
+							<option value="Ålesund">Ålesund</option>
+							<option value="Bodø">Bodø</option>
+						</select>
+					</div>
+				</div>
+				<div>
 					<h3 id="flip">Toggle outer labels</h3>
 					<label class="switch">
 						<input type="checkbox" id="label-toggler" />
@@ -36,6 +62,7 @@
 				</div>
 			</div>
 			<div id="svg-container"></div>
+			<div id="sunburst-comparator-container"></div>
 		</div>
 		<div class="footer">Developed by Christoffer A Træen</div>
 		<script src="/js/bundle.js"></script>
