Set default to dimension compare

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,13 @@
 
 					<div>
 						<label for="compare-dimension">Dimension</label>
-						<input class="coparator-selector" type="radio" name="type" id="compare-dimension" />
+						<input
+							class="coparator-selector"
+							type="radio"
+							name="type"
+							checked
+							id="compare-dimension"
+						/>
 						<br />
 						<label for="compare-sub-dimension">Sub dimension</label>
 						<input class="coparator-selector" type="radio" name="type" id="compare-sub-dimension" />
